# red-team-arsenal

./: .env  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.py  docker-compose.yml  main.py  pyproject.toml
agents/: __init__.py  academic_agent.py  auto_exploiter.py  base_agent.py  binary_specialist.py  brute_agent.py  cleaner_agent.py  credential_agent.py  crypto_agent.py  db_agent.py  evasion_agent.py  exploit_master.py  firmware_agent.py  identity_agent.py  mobile_agent.py  payload_agent.py  persistence_agent.py  pivoting_agent.py  polyglot_coder.py  profiling_agent.py  recon_master.py  red_team_supreme.py  reverse_agent.py  se_agent.py  supply_chain_agent.py  threat_intel_agent.py  traffic_agent.py  vanguard_agent.py  webapp_agent.py
cloudflare/: worker.js  wrangler.toml
core/: agent_controller.py  ato_engine.py  bypass_engine.py  c2_orchestrator.py  continuous_orchestrator.py  evasion_engine.py  exfil_engine.py  exploit_feed.py  hive_mind.py  identity_graph.py  memory.py  mesh_manager.py  model_hub.py  model_router.py  opsec_manager.py  orchestrator.py  reasoning_verifier.py  remediation_engine.py  reporter.py  shadow_refactor.py  task_planner.py  team_selector.py  toolkit_manager.py
dashboard/: index.html  package-lock.json  package.json  vite.config.js
docs/: ENTERPRISE_GUIDE.md  GRANTS.md  INVESTORS.md  ROADMAP.md
infrastructure/: red_baron.tf
integrations/: apify_client.py  cloudflare_client.py  hyperbrowser_client.py  tavily_client.py
knowledge/: research_agent.py  shadow_kb.json  telecom_intel.py
models/: hf_client.py  infermatic_client.py  model_catalog.py
reports/: report_0260e9a6_1772130124.md  (+31 more)
scripts/: rj-deploy.sh  (+3 more)
(+59 files in other folders)
